--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,4 +9,15 @@ Description: These are a collection of functions which were designed to
 License: What license is it under?
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 6.1.0
+RoxygenNote: 6.1.1
+Imports: 
+    dplyr,
+    magrittr,
+    SummarizedExperiment,
+    tibble,
+    reshape2,
+    DESeq2,
+    doParallel,
+    foreach
+Suggests: 
+    testthat
