--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,25 +4,22 @@ export("%>%")
 export(basic_linear_regression)
 export(basic_logistic_regression)
 export(better_model_matrix)
-export(create_test_dds)
-export(enrich_go_wrapper)
-export(enrich_pathway_wrapper)
-export(ensembl_to_entrez_genes)
+export(dge_wrapper)
+export(enrich_wrapper)
+export(expression_summaries)
 export(gene_quantile_filter)
 export(get_deseq2_results)
 export(get_geneSets)
 export(get_limma_results)
-export(lmlist_to_df)
-export(make_pca_plot_data)
-export(pca_categorical_triplot)
+export(get_overlap_matix)
+export(increase_xy_lims)
 export(pca_plotter)
 export(rbind_named_df_list)
 export(select_genes_by_variance)
-export(split_by_reg)
-export(split_fix_names)
 export(uniquefy_by_abs_max)
 export(uniquefy_by_variance)
 export(volcano_plotter)
+export(voom_sva_wrapper)
 import(doParallel)
 import(foreach)
 importFrom(magrittr,"%>%")
